[Docs] Fix `section-title` spacing

--- a/docs/_sass/_chrome.scss
+++ b/docs/_sass/_chrome.scss
@@ -69,8 +69,8 @@ figure {
 }
 
 .section-title {
-  margin-bottom: $spacing-unit / 4;
-  padding-bottom: $spacing-unit / 4;
+  margin-bottom: $spacing-unit;
+  padding-bottom: $spacing-unit;
   border-bottom: 1px solid $grey;
 }
 
